sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/AnalysisDataJSON__c.field-meta.xml
<CustomField>
    <fullName>AnalysisDataJSON__c</fullName>
    <label>AnalysisDataJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>