sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Apex_Sharing_Scan_Complete__c.field-meta.xml
<CustomField>
    <fullName>Apex_Sharing_Scan_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Queueable and Batchable jobs checking for Apex Share Reasons has completed</description>
    <label>Apex Sharing Scan Complete</label>
    <type>Checkbox</type>
</CustomField>