sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/ApexShareAnalysisJSON__c.field-meta.xml
<CustomField>
    <fullName>ApexShareAnalysisJSON__c</fullName>
    <label>ApexShareAnalysisJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>