sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Bulk_Scan_Complete__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Scan_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that background scanning of org dependencies and upgrade readiness on this org has completed</description>
    <label>Bulk Scan Complete</label>
    <type>Checkbox</type>
</CustomField>