sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Captive_Subverticle_Selected__c.field-meta.xml
<CustomField>
    <fullName>Captive_Subverticle_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Captive Subverticle Selected</label>
    <type>Checkbox</type>
</CustomField>