sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Current_Question_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Question_Id__c</fullName>
    <label>Current Question Id</label>
    <length>22</length>
    <type>Text</type>
</CustomField>