sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Current_Question_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Question_Number__c</fullName>
    <label>Current Question Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>