sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Customer_Representation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Representation__c</fullName>
    <label>Customer Representation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>People (B2C)</fullName>
            </value>
            <value>
                <fullName>Businesses (B2B)</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>