sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Customer_Types__c.field-meta.xml
<CustomField>
    <fullName>Customer_Types__c</fullName>
    <label>Customer Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member (HC Payer)</fullName>
                <label>Member</label>
            </value>
            <value>
                <fullName>Client (HC Payer)</fullName>
                <label>Client</label>
            </value>
            <value>
                <fullName>Broker (HC Payer)</fullName>
                <label>Broker</label>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Patients (HC Provider)</fullName>
                <label>Patients</label>
            </value>
            <value>
                <fullName>Other Provider Orgs (HC Provider)</fullName>
                <label>Other Provider Orgs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>