sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Dealer_Subverticle_Selected__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Subverticle_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Subverticle Selected</label>
    <type>Checkbox</type>
</CustomField>