sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/DeployedPackageJSON__c.field-meta.xml
<CustomField>
    <fullName>DeployedPackageJSON__c</fullName>
    <label>DeployedPackageJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>