sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/DeploymentDataJSON__c.field-meta.xml
<CustomField>
    <fullName>DeploymentDataJSON__c</fullName>
    <label>DeploymentDataJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>