sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Error_Messages_JSON__c.field-meta.xml
<CustomField>
    <fullName>Error_Messages_JSON__c</fullName>
    <description>Save error messages during Transition Analysis/Recommendation process</description>
    <label>Error Messages JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>