sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/ErrorDeployPackagesJSON__c.field-meta.xml
<CustomField>
    <fullName>ErrorDeployPackagesJSON__c</fullName>
    <label>ErrorDeployPackagesJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>