sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/ErrorInstallPackagesJSON__c.field-meta.xml
<CustomField>
    <fullName>ErrorInstallPackagesJSON__c</fullName>
    <label>ErrorInstallPackagesJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>