sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/External_Data_In_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>External_Data_In_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Data In Salesforce</label>
    <type>Checkbox</type>
</CustomField>