sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Financial_Accounts_Leveraged__c.field-meta.xml
<CustomField>
    <fullName>Financial_Accounts_Leveraged__c</fullName>
    <label>Financial Accounts Leveraged</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking Account</fullName>
            </value>
            <value>
                <fullName>Savings Account</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Investment Account</fullName>
            </value>
            <value>
                <fullName>Treasury Service</fullName>
            </value>
            <value>
                <fullName>Not Listed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>