sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Has_Apex_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Has_Apex_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have Apex Sharing Reasons been detected?</inlineHelpText>
    <label>Has Apex Sharing</label>
    <type>Checkbox</type>
</CustomField>