sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Has_Apex_Sharing_on_CDS_Object__c.field-meta.xml
<CustomField>
    <fullName>Has_Apex_Sharing_on_CDS_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether AccountShare or OpportunityShare reference has been found in Apex</description>
    <label>Has Apex Sharing on CDS Object</label>
    <type>Checkbox</type>
</CustomField>