sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Has_Branch_Management__c.field-meta.xml
<CustomField>
    <fullName>Has_Branch_Management__c</fullName>
    <label>Has Branch Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I currently track branches in Salesforce</fullName>
            </value>
            <value>
                <fullName>I don’t currently track branches, but want to moving forward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>