sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Has_Rollups__c.field-meta.xml
<CustomField>
    <fullName>Has_Rollups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Rollups?</label>
    <type>Checkbox</type>
</CustomField>