sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/HasMappingData__c.field-meta.xml
<CustomField>
    <fullName>HasMappingData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that mapping has been completed for this Assessment.</description>
    <inlineHelpText>If checked, indicates that mapping has been completed for this Assessment.</inlineHelpText>
    <label>Has Mapping Data?</label>
    <type>Checkbox</type>
</CustomField>