sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/InstallDataJSON__c.field-meta.xml
<CustomField>
    <fullName>InstallDataJSON__c</fullName>
    <label>InstallDataJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>