sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Is_B2B__c.field-meta.xml
<CustomField>
    <fullName>Is_B2B__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is B2B?</label>
    <type>Checkbox</type>
</CustomField>