sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Is_B2C__c.field-meta.xml
<CustomField>
    <fullName>Is_B2C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is B2C?</label>
    <type>Checkbox</type>
</CustomField>