sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Is_Non_Admin_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Admin_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Non Admin User</label>
    <type>Checkbox</type>
</CustomField>