sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Last_Package_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Package_Created_Date__c</fullName>
    <label>Last Package Created Date</label>
    <type>DateTime</type>
</CustomField>