sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/MappingDataJSON__c.field-meta.xml
<CustomField>
    <fullName>MappingDataJSON__c</fullName>
    <label>MappingDataJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>