sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Org_Field_Count__c.field-meta.xml
<CustomField>
    <fullName>Org_Field_Count__c</fullName>
    <description>The number of total fields present in the org.</description>
    <inlineHelpText>The number of total fields present in the org.</inlineHelpText>
    <label>Org Field Count</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>