sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Payer_Subvertical_Selected__c.field-meta.xml
<CustomField>
    <fullName>Payer_Subvertical_Selected__c</fullName>
    <formula>INCLUDES( Selected_Products__c , &apos;HC Payer&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payer Subvertical Selected</label>
    <type>Checkbox</type>
</CustomField>