sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/PDF_Generation_Complete__c.field-meta.xml
<CustomField>
    <fullName>PDF_Generation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes when Heroku has finished processing the PDF report version of the Assessment</description>
    <label>PDF Generation Complete</label>
    <type>Checkbox</type>
</CustomField>