sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/PendingDeployPackagesJSON__c.field-meta.xml
<CustomField>
    <fullName>PendingDeployPackagesJSON__c</fullName>
    <label>PendingDeployPackagesJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>