sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/PendingInstallPackagesJSON__c.field-meta.xml
<CustomField>
    <fullName>PendingInstallPackagesJSON__c</fullName>
    <label>PendingInstallPackagesJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>