sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Policy_Data__c.field-meta.xml
<CustomField>
    <fullName>Policy_Data__c</fullName>
    <label>Policy Data</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
            <value>
                <fullName>Property and Casualty Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>