sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Provider_Subvertical_Selected__c.field-meta.xml
<CustomField>
    <fullName>Provider_Subvertical_Selected__c</fullName>
    <formula>INCLUDES( Selected_Products__c , &apos;HC Provider&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Subvertical Selected</label>
    <type>Checkbox</type>
</CustomField>