sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Relationship_Groupings__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Groupings__c</fullName>
    <label>Relationship Groupings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family Households</fullName>
            </value>
            <value>
                <fullName>Business Groups</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>