sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <description>Date in which the report for this assessment was generated</description>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>