sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Report_Summary_PDF_Generation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Report_Summary_PDF_Generation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this Assessment has successfully received the generated Report Summary PDF</description>
    <inlineHelpText>If checked, this Assessment has successfully received the generated Report Summary PDF</inlineHelpText>
    <label>Report Summary PDF Generation Complete</label>
    <type>Checkbox</type>
</CustomField>