sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Selected_Products__c.field-meta.xml
<CustomField>
    <fullName>Selected_Products__c</fullName>
    <label>Selected Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC Dealers</fullName>
            </value>
            <value>
                <fullName>AC OEMs</fullName>
            </value>
            <value>
                <fullName>AC Fleet Owners</fullName>
            </value>
            <value>
                <fullName>AC Captive Finance Companies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>