sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Initializing</fullName>
            </value>
            <value>
                <fullName>Scanning Dependencies</fullName>
            </value>
            <value>
                <fullName>Scanning for Sharing Reasons</fullName>
            </value>
            <value>
                <fullName>Scanning Apex Sharing</fullName>
            </value>
            <value>
                <fullName>Generating Deployment Package</fullName>
            </value>
            <value>
                <fullName>Deployment Package Ready</fullName>
            </value>
            <value>
                <fullName>Finalizing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>