sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Test_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Test_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>