sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/TEST_Probabilistic_Encryption__c.field-meta.xml
<CustomField>
    <fullName>TEST_Probabilistic_Encryption__c</fullName>
    <label>TEST Probabilistic Encryption</label>
    <length>175</length>
    <type>Text</type>
</CustomField>