sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Timeout_Warning_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Warning_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timeout Warning Indicator</label>
    <type>Checkbox</type>
</CustomField>