sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Tracks_Policy_Participants__c.field-meta.xml
<CustomField>
    <fullName>Tracks_Policy_Participants__c</fullName>
    <label>Tracks Policy Participants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I do track policy participants</fullName>
            </value>
            <value>
                <fullName>No, I do not track policy participants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>