sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Tracks_Providers__c.field-meta.xml
<CustomField>
    <fullName>Tracks_Providers__c</fullName>
    <label>Tracks Providers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>