sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Upgrade_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Recommendation__c</fullName>
    <label>Upgrade Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean Upgrade Existing Org</fullName>
            </value>
            <value>
                <fullName>Complex Upgrade Existing Org</fullName>
            </value>
            <value>
                <fullName>Complex Upgrade New Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>