sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Vehicle_Selected__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Selected</label>
    <type>Checkbox</type>
</CustomField>