sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment__c/fields/Warranties_Selected__c.field-meta.xml
<CustomField>
    <fullName>Warranties_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranties Selected</label>
    <type>Checkbox</type>
</CustomField>